# rmr_kobuki

./: .gitignore  README.md
demoRMR/: CKobuki.cpp  CKobuki.h  Makefile  demoRMR  demoRMR.pro  mainwindow.cpp  mainwindow.h  rplidar.cpp  rplidar.h
doc/: RMR úloha 1.pptx  rmr uloha 3.pptx  rmr uloha2.pptx  rmr uloha4.pptx
kobuki_project/: CMakeLists.txt  ideal_map.txt  ideal_map_sutaz.txt  map_dataset.csv  map_dataset.yaml  notes
kobuki_project/data/: bludisko1.yaml  bludisko2.yaml  bludisko3.yaml  scan1.yaml
kobuki_project/include/: config_defines.h  global_planner.h  kobuki.h  lidar.h  lidar_interface.h  local_planner.h  own_typedefs.h  regulator.h  robot_interface.h  robot_map.h  ui.h  visualizer.h
kobuki_project/src/: global_planner.cpp  kobuki.cpp  lidar.cpp  lidar_interface.cpp  local_planner.cpp  main.cpp  regulator.cpp  robot_interface.cpp  robot_map.cpp  ui.cpp  visualizer.cpp
kobuki_project/ui/: mainwindow.ui  ui_mainwindow.h
research/: angle_regulator_function.m  flood_fill_algorithm.m  goal_robot_angles_diffrence.m  transformations.m
